Generate better PyPI index
Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/pypi/simple/index.html
+++ b/pypi/simple/index.html
@@ -1,5 +1,5 @@
 <html><head><title>PyPI Simple Index</title>
-<meta name='api-version' value='2' /></head><body>
+<meta charset="UTF-8"><meta name="api-version" value="2" /></head><body>
 <a href="bitarray/">bitarray</a><br/>
 <a href="kombu/">kombu</a><br/>
 <a href="cached-property/">cached-property</a><br/>
@@ -12,7 +12,7 @@
 <a href="pyahocorasick/">pyahocorasick</a><br/>
 <a href="funcparserlib/">funcparserlib</a><br/>
 <a href="aboutcode-toolkit/">aboutcode-toolkit</a><br/>
-<a href="pdfminer.six/">pdfminer.six</a><br/>
+<a href="pdfminer-six/">pdfminer-six</a><br/>
 <a href="importlib-resources/">importlib-resources</a><br/>
 <a href="requests-toolbelt/">requests-toolbelt</a><br/>
 <a href="construct/">construct</a><br/>
@@ -52,7 +52,7 @@
 <a href="six/">six</a><br/>
 <a href="ansible/">ansible</a><br/>
 <a href="regex/">regex</a><br/>
-<a href="boolean.py/">boolean.py</a><br/>
+<a href="boolean-py/">boolean-py</a><br/>
 <a href="pprintpp/">pprintpp</a><br/>
 <a href="extractcode-7z-system-provided/">extractcode-7z-system-provided</a><br/>
 <a href="fingerprints/">fingerprints</a><br/>
@@ -110,7 +110,7 @@
 <a href="pkginfo2/">pkginfo2</a><br/>
 <a href="readme-renderer/">readme-renderer</a><br/>
 <a href="idna/">idna</a><br/>
-<a href="jaraco.functools/">jaraco.functools</a><br/>
+<a href="jaraco-functools/">jaraco-functools</a><br/>
 <a href="click-plugins/">click-plugins</a><br/>
 <a href="docutils/">docutils</a><br/>
 <a href="click-didyoumean/">click-didyoumean</a><br/>
@@ -269,7 +269,7 @@
 <a href="ndg-httpsclient/">ndg-httpsclient</a><br/>
 <a href="fasteners/">fasteners</a><br/>
 <a href="django-grappelli/">django-grappelli</a><br/>
-<a href="backports.entry-points-selectable/">backports.entry-points-selectable</a><br/>
+<a href="backports-entry-points-selectable/">backports-entry-points-selectable</a><br/>
 <a href="setuptools-scm-git-archive/">setuptools-scm-git-archive</a><br/>
 <a href="ansible-core/">ansible-core</a><br/>
 <a href="filelock/">filelock</a><br/>
