Use proper normalized PyPI names
Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/pypi/simple/boolean-py/index.html
+++ b/pypi/simple/boolean-py/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="pypi:repository-version" content="1.0">
-    <title>Links for boolean.py</title>
+    <title>Links for boolean-py</title>
   </head>
   <body>
     <a href="https://thirdparty.aboutcode.org/pypi/boolean.py-3.7.tar.gz#sha256=bd19b412435611ecc712603d0fd7d0e280e24698e7a6e3d5f610473870c5dd1e">boolean.py-3.7.tar.gz</a><br/>
