--- a/pypi/simple/jaraco-functools/index.html
+++ b/pypi/simple/jaraco-functools/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="pypi:repository-version" content="1.0">
-    <title>Links for jaraco.functools</title>
+    <title>Links for jaraco-functools</title>
   </head>
   <body>
     <a href="https://thirdparty.aboutcode.org/pypi/jaraco.functools-2.0-py2.py3-none-any.whl#sha256=e9e377644cee5f6f9128b4dab1631fca74981236e95a255f80e4292bcd2b5284">jaraco.functools-2.0-py2.py3-none-any.whl</a><br/>
