--- a/pypi/simple/pdfminer-six/index.html
+++ b/pypi/simple/pdfminer-six/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="pypi:repository-version" content="1.0">
-    <title>Links for pdfminer.six</title>
+    <title>Links for pdfminer-six</title>
   </head>
   <body>
     <a href="https://thirdparty.aboutcode.org/pypi/pdfminer.six-20201018.tar.gz#sha256=b9aac0ebeafb21c08bf65f2039f4b2c5f78a3449d0a41df711d72445649e952a">pdfminer.six-20201018.tar.gz</a><br/>
