--- a/pypi/simple/backports-entry-points-selectable/index.html
+++ b/pypi/simple/backports-entry-points-selectable/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="pypi:repository-version" content="1.0">
-    <title>Links for backports.entry-points-selectable</title>
+    <title>Links for backports-entry-points-selectable</title>
   </head>
   <body>
     <a href="https://thirdparty.aboutcode.org/pypi/backports.entry_points_selectable-1.1.0.tar.gz#sha256=988468260ec1c196dab6ae1149260e2f5472c9110334e5d51adcb77867361f6a">backports.entry_points_selectable-1.1.0.tar.gz</a><br/>
