Add new packages
Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/pypi/simple/links.html
+++ b/pypi/simple/links.html
@@ -523,6 +523,12 @@
     <a href="https://thirdparty.aboutcode.org/pypi/click-8.0.3-py3-none-any.whl#sha256=353f466495adaeb40b6b5f592f9f91cb22372351c84caeb068132442a4518ef3">click-8.0.3-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/click-8.0.4-py3-none-any.whl#sha256=6a7a62563bbfabfda3a38f3023a1db4a35978c0abd76f6c9605ecd6554d6d9b1">click-8.0.4-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/click-7.1.2.tar.gz#sha256=d2b5255c7c6349bc1bd1e59e08cd12acbbd63ce649f2588755783aa94dfb6b1a">click-7.1.2.tar.gz</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/tomli-2.0.1.tar.gz#sha256=de526c12914f0c550d15924c62d72abc48d6fe7364aa87328337a31007fe8a4f">tomli-2.0.1.tar.gz</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/tomli-1.2.3.tar.gz#sha256=05b6166bff487dc068d322585c7ea4ef78deed501cc124060e0f238e89a9231f">tomli-1.2.3.tar.gz</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/tomli-2.0.1-py3-none-any.whl#sha256=939de3e7a6161af0c887ef91b7d41a53e7c5a1ca976325f429cb46ea9bc30ecc">tomli-2.0.1-py3-none-any.whl</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/tomli-1.2.1.tar.gz#sha256=a5b75cb6f3968abb47af1b40c1819dc519ea82bcc065776a866e8d74c5ca9442">tomli-1.2.1.tar.gz</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/tomli-1.2.1-py3-none-any.whl#sha256=8dd0e9524d6f386271a36b41dbf6c57d8e32fd96fd22b6584679dc569d20899f">tomli-1.2.1-py3-none-any.whl</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/tomli-1.2.3-py3-none-any.whl#sha256=e3069e4be3ead9668e21cb9b074cd948f7b3113fd9c8bba083f48247aab8b11c">tomli-1.2.3-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/parameter_expansion_patched-0.2.1b3-py3-none-any.whl#sha256=8b19728c77ef756cf1da758f1ba785c41695660e4c84775187263bbf6a9eb240">parameter_expansion_patched-0.2.1b3-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/parameter_expansion_patched-0.2.1b4-py3-none-any.whl#sha256=2f7463c38f2e9f870e131230ebd38d4d9622ba9b284e7e31354abab731cf58ed">parameter_expansion_patched-0.2.1b4-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/parameter-expansion-patched-0.2.1b1.tar.gz#sha256=68edd22e00bec014d38b0be9495f14e68fa6121b1fe725287a08cf2a289dfa7d">parameter-expansion-patched-0.2.1b1.tar.gz</a><br/>
@@ -730,6 +736,7 @@
     <a href="https://thirdparty.aboutcode.org/pypi/MarkupSafe-2.0.1-cp36-cp36m-manylinux2010_x86_64.whl#sha256=fa130dd50c57d53368c9d59395cb5526eda596d3ffe36666cd81a44d56e48872">MarkupSafe-2.0.1-cp36-cp36m-manylinux2010_x86_64.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/MarkupSafe-2.1.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl#sha256=24c3be29abb6b34052fd26fc7a8e0a49b1ee9d282e3665e8ad09a0a68faee5b3">MarkupSafe-2.1.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/MarkupSafe-1.0.tar.gz#sha256=a6be69091dac236ea9c6bc7d012beab42010fa914c459791d627dad4910eb665">MarkupSafe-1.0.tar.gz</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/MarkupSafe-2.0.1-cp38-cp38-macosx_10_9_universal2.whl#sha256=5bb28c636d87e840583ee3adeb78172efc47c8b26127267f54a9c0ec251d41a9">MarkupSafe-2.0.1-cp38-cp38-macosx_10_9_universal2.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/MarkupSafe-2.1.0-cp39-cp39-win_amd64.whl#sha256=b8811d48078d1cf2a6863dafb896e68406c5f513048451cd2ded0473133473c7">MarkupSafe-2.1.0-cp39-cp39-win_amd64.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/MarkupSafe-1.1.1-cp36-cp36m-macosx_10_6_intel.whl#sha256=24982cc2533820871eba85ba648cd53d8623687ff11cbb805be4ff7b4c971aff">MarkupSafe-1.1.1-cp36-cp36m-macosx_10_6_intel.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/MarkupSafe-1.1.1-cp38-cp38-manylinux1_x86_64.whl#sha256=13d3144e1e340870b25e7b10b98d779608c02016d5184cfb9927a9f10c689f42">MarkupSafe-1.1.1-cp38-cp38-manylinux1_x86_64.whl</a><br/>
@@ -745,6 +752,7 @@
     <a href="https://thirdparty.aboutcode.org/pypi/MarkupSafe-2.0.1-cp38-cp38-macosx_10_9_x86_64.whl#sha256=be98f628055368795d818ebf93da628541e10b75b41c559fdf36d104c5787066">MarkupSafe-2.0.1-cp38-cp38-macosx_10_9_x86_64.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/MarkupSafe-2.0.1-cp310-cp310-win_amd64.whl#sha256=e0f138900af21926a02425cf736db95be9f4af72ba1bb21453432a07f6082134">MarkupSafe-2.0.1-cp310-cp310-win_amd64.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/MarkupSafe-2.0.1-cp37-cp37m-manylinux1_x86_64.whl#sha256=49e3ceeabbfb9d66c3aef5af3a60cc43b85c33df25ce03d0031a608b0a8b2e3f">MarkupSafe-2.0.1-cp37-cp37m-manylinux1_x86_64.whl</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/MarkupSafe-2.0.1-cp39-cp39-macosx_10_9_universal2.whl#sha256=2ef54abee730b502252bcdf31b10dacb0a416229b72c18b19e24a4509f273d26">MarkupSafe-2.0.1-cp39-cp39-macosx_10_9_universal2.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/MarkupSafe-2.0.1-cp37-cp37m-win_amd64.whl#sha256=611d1ad9a4288cf3e3c16014564df047fe08410e628f89805e475368bd304914">MarkupSafe-2.0.1-cp37-cp37m-win_amd64.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/MarkupSafe-2.1.0-cp310-cp310-win_amd64.whl#sha256=d4e702eea4a2903441f2735799d217f4ac1b55f7d8ad96ab7d4e25417cb0827c">MarkupSafe-2.1.0-cp310-cp310-win_amd64.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/MarkupSafe-2.1.0-cp39-cp39-macosx_10_9_universal2.whl#sha256=023af8c54fe63530545f70dd2a2a7eed18d07a9a77b94e8bf1e2ff7f252db9a3">MarkupSafe-2.1.0-cp39-cp39-macosx_10_9_universal2.whl</a><br/>
@@ -1344,10 +1352,6 @@
     <a href="https://thirdparty.aboutcode.org/pypi/tqdm-4.61.0.tar.gz#sha256=cd5791b5d7c3f2f1819efc81d36eb719a38e0906a7380365c556779f585ea042">tqdm-4.61.0.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/django-rq-2.5.1.tar.gz#sha256=f08486602664d73a6e335872c868d79663e380247e6307496d01b8fa770fefd8">django-rq-2.5.1.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/django_rq-2.5.1-py2.py3-none-any.whl#sha256=7be1e10e7091555f9f36edf100b0dbb205ea2b98683d74443d2bdf3c6649a03f">django_rq-2.5.1-py2.py3-none-any.whl</a><br/>
-    <a href="https://thirdparty.aboutcode.org/pypi/tomli-1.2.3.tar.gz#sha256=05b6166bff487dc068d322585c7ea4ef78deed501cc124060e0f238e89a9231f">tomli-1.2.3.tar.gz</a><br/>
-    <a href="https://thirdparty.aboutcode.org/pypi/tomli-1.2.1.tar.gz#sha256=a5b75cb6f3968abb47af1b40c1819dc519ea82bcc065776a866e8d74c5ca9442">tomli-1.2.1.tar.gz</a><br/>
-    <a href="https://thirdparty.aboutcode.org/pypi/tomli-1.2.1-py3-none-any.whl#sha256=8dd0e9524d6f386271a36b41dbf6c57d8e32fd96fd22b6584679dc569d20899f">tomli-1.2.1-py3-none-any.whl</a><br/>
-    <a href="https://thirdparty.aboutcode.org/pypi/tomli-1.2.3-py3-none-any.whl#sha256=e3069e4be3ead9668e21cb9b074cd948f7b3113fd9c8bba083f48247aab8b11c">tomli-1.2.3-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/marshmallow_enum-1.5.1-py2.py3-none-any.whl#sha256=57161ab3dbfde4f57adeb12090f39592e992b9c86d206d02f6bd03ebec60f072">marshmallow_enum-1.5.1-py2.py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/marshmallow-enum-1.5.1.tar.gz#sha256=38e697e11f45a8e64b4a1e664000897c659b60aa57bfa18d44e226a9920b6e58">marshmallow-enum-1.5.1.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/freezegun-1.1.0-py2.py3-none-any.whl#sha256=2ae695f7eb96c62529f03a038461afe3c692db3465e215355e1bb4b0ab408712">freezegun-1.1.0-py2.py3-none-any.whl</a><br/>
@@ -1758,6 +1762,8 @@
     <a href="https://thirdparty.aboutcode.org/pypi/apipkg-2.1.0.tar.gz#sha256=a4be31cf8081e660d2cdea6edfb8a0f39f385866abdcfcfa45e5a0887345cb70">apipkg-2.1.0.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/apipkg-2.1.0-py2.py3-none-any.whl#sha256=e5d85ce3a2e622734c5daebb213df044d4cedee1031fbe98add3c73ca5995b94">apipkg-2.1.0-py2.py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/normality-2.2.3.tar.gz#sha256=cb7ff88348f090b8f5517baeda3d7cced94cebf6ae3e6756689a73d18b1bc041">normality-2.2.3.tar.gz</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/normality-2.3.0.tar.gz#sha256=028412a9f925c26bb93a2dec3e5bd42823d91a1d0f9dd8f01977a7cbd9eb380d">normality-2.3.0.tar.gz</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/normality-2.3.0-py2.py3-none-any.whl#sha256=a249b2c761274ac11e4a3bf2d08fa0a78853d59b5406216a65fe2b99cd0f43d1">normality-2.3.0-py2.py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/normality-2.2.5.tar.gz#sha256=b27d8c9b79efa7a6a7e90253b56ccb448b4873dfc3803a669e72159b2038625a">normality-2.2.5.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/normality-2.2.2-py2.py3-none-any.whl#sha256=17c06fb63aa5f892eaca7fc25b93e91008b61ff64bb6ad7bd6320368f4f3fafa">normality-2.2.2-py2.py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/normality-2.2.5-py2.py3-none-any.whl#sha256=2cd20c6f78e3a9eb661e46a4194d12f253b58a84e58bbc389c6e12b63793a004">normality-2.2.5-py2.py3-none-any.whl</a><br/>
