--- a/pypi/simple/links.html
+++ b/pypi/simple/links.html
@@ -1160,6 +1160,8 @@
     <a href="https://thirdparty.aboutcode.org/pypi/doc8-0.10.1-py3-none-any.whl#sha256=551a61df5915f0107e518d582fead47a0a56df7d4a9374feab955ea14dedea84">doc8-0.10.1-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/doc8-0.11.1.tar.gz#sha256=6dbcb5472efd332763ffb2862b4fdeec40c8a6fdc6bb67e68713ad749ca5808c">doc8-0.11.1.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/dparse2-0.6.0-py3-none-any.whl#sha256=12b8bc8d6c499d29c357d805777e12830046fe685e8d16f679727c37e63b36d9">dparse2-0.6.0-py3-none-any.whl</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/dparse2-0.6.1.tar.gz#sha256=fbafb839c3dc83040012af2602a00ca4e4b1693a9b1988492150466afa59dd26">dparse2-0.6.1.tar.gz</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/dparse2-0.6.1-py3-none-any.whl#sha256=da48d094e6dd6138d003a88c707ac5fea64e88cf7f7f2f68181afd5ba25506d8">dparse2-0.6.1-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/dparse2-0.5.0.4-py2.py3-none-any.whl#sha256=7ba548299caab598f9d7b3cccc20086f6c5cee546b1c6e347bcef4ea83f13260">dparse2-0.5.0.4-py2.py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/dparse2-0.6.0.tar.gz#sha256=de3ccdc023f9fc3d5023ae9f56cf522e167211cf3ae209142a9854faa05fc77f">dparse2-0.6.0.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/dparse2-0.5.0.4.tar.gz#sha256=8704ed31e2ca5f40cbeaea314affe52a4b2f0c18197dc7ea031b376fdab5a136">dparse2-0.5.0.4.tar.gz</a><br/>
