Add new versions
Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/pypi/simple/links.html
+++ b/pypi/simple/links.html
@@ -1502,6 +1502,8 @@
     <a href="https://thirdparty.aboutcode.org/pypi/container-inspector-21.5.25.tar.gz#sha256=ba973fd925d6c89751f3fc0b372b0deeb1f093a528f8cad919f7d3edc7d3779c">container-inspector-21.5.25.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/container-inspector-21.6.10.tar.gz#sha256=b36e3c7cd3095c60bb1eacb4f9af7b533e8988b4f8dcc20bbd522e995ff21c9e">container-inspector-21.6.10.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/container_inspector-21.6.10-py3-none-any.whl#sha256=e09d9ce5fd81c83fa9b0cf062cef452c4426db58d208e687185c0e9b34563edc">container_inspector-21.6.10-py3-none-any.whl</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/container_inspector-31.0.0-py3-none-any.whl#sha256=9cecf2a0376fbb0a18d89fab8081e4f3713dee4612a6e3dc4e05c95504870773">container_inspector-31.0.0-py3-none-any.whl</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/container-inspector-31.0.0.tar.gz#sha256=b05ee4009e06d26ee94bab9621ccbb559593fc4f07f91c77cf662a6207736a18">container-inspector-31.0.0.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/container-inspector-30.0.0.tar.gz#sha256=c53ed9193f406a86a85cc4be1a6f18c8d067f0d5143fc9c8a55154a0eb908c0f">container-inspector-30.0.0.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/container_inspector-30.0.0-py3-none-any.whl#sha256=e643616b3a0cf28500f7fb688082b150746ba7742f57c6b6bef325ee01f45258">container_inspector-30.0.0-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/container_inspector-21.5.25-py3-none-any.whl#sha256=bf9e9b4359cb04a7f20d30ce9e8dd31757e2bcb2ae45c824e40929bd1c4e2d09">container_inspector-21.5.25-py3-none-any.whl</a><br/>
@@ -1516,7 +1518,9 @@
     <a href="https://thirdparty.aboutcode.org/pypi/plugincode-21.1.15-py3-none-any.whl#sha256=7b9ca421cf2ca66763d30a03e74ebee3a4bc3e8ef78497119f4f9dcaa83dc52e">plugincode-21.1.15-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/plugincode-20.9.tar.gz#sha256=dd7ac8705687f79d94d8b3834a08f314b1601a3526300239f38ebd967c9db5c1">plugincode-20.9.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/plugincode-21.1.21-py3-none-any.whl#sha256=94634893146e5cde97ee9774fe983e7cb78dee9f147687d0a1d6a2d6ad8738eb">plugincode-21.1.21-py3-none-any.whl</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/plugincode-30.0.0-py3-none-any.whl#sha256=6d38f0d2778c56fd9e344f08478e3cf4177cef198e4851ad19f11123892124b5">plugincode-30.0.0-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/plugincode-21.1.15.tar.gz#sha256=a7dc8c053a486e4a324d19d77f9df0e96150bceb10005b493ac1c13ee3b78640">plugincode-21.1.15.tar.gz</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/plugincode-30.0.0.tar.gz#sha256=4237100af865681cdc6c107c30885bb31e1c472ed791dbd47261bbacce3c4a8b">plugincode-30.0.0.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/plugincode-20.9-py2.py3-none-any.whl#sha256=4918439d0b7505f555825adb8b79d90095b724d499ebd172a80893c7b635db99">plugincode-20.9-py2.py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/importlib_metadata-4.5.0-py3-none-any.whl#sha256=833b26fb89d5de469b24a390e9df088d4e52e4ba33b01dc5e0e4f41b81a16c00">importlib_metadata-4.5.0-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/importlib_metadata-1.5.0-py2.py3-none-any.whl#sha256=b97607a1a18a5100839aec1dc26a1ea17ee0d93b20b0f008d80a5a050afb200b">importlib_metadata-1.5.0-py2.py3-none-any.whl</a><br/>
