--- a/pypi/simple/plugincode/index.html
+++ b/pypi/simple/plugincode/index.html
@@ -9,7 +9,9 @@
     <a href="https://thirdparty.aboutcode.org/pypi/plugincode-21.1.15-py3-none-any.whl#sha256=7b9ca421cf2ca66763d30a03e74ebee3a4bc3e8ef78497119f4f9dcaa83dc52e">plugincode-21.1.15-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/plugincode-20.9.tar.gz#sha256=dd7ac8705687f79d94d8b3834a08f314b1601a3526300239f38ebd967c9db5c1">plugincode-20.9.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/plugincode-21.1.21-py3-none-any.whl#sha256=94634893146e5cde97ee9774fe983e7cb78dee9f147687d0a1d6a2d6ad8738eb">plugincode-21.1.21-py3-none-any.whl</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/plugincode-30.0.0-py3-none-any.whl#sha256=6d38f0d2778c56fd9e344f08478e3cf4177cef198e4851ad19f11123892124b5">plugincode-30.0.0-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/plugincode-21.1.15.tar.gz#sha256=a7dc8c053a486e4a324d19d77f9df0e96150bceb10005b493ac1c13ee3b78640">plugincode-21.1.15.tar.gz</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/plugincode-30.0.0.tar.gz#sha256=4237100af865681cdc6c107c30885bb31e1c472ed791dbd47261bbacce3c4a8b">plugincode-30.0.0.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/plugincode-20.9-py2.py3-none-any.whl#sha256=4918439d0b7505f555825adb8b79d90095b724d499ebd172a80893c7b635db99">plugincode-20.9-py2.py3-none-any.whl</a><br/>
   </body>
 </html>
