Add newer versions
Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/pypi/simple/pdfminer-six/index.html
+++ b/pypi/simple/pdfminer-six/index.html
@@ -7,9 +7,11 @@
   <body>
     <a href="https://thirdparty.aboutcode.org/pypi/pdfminer.six-20201018.tar.gz#sha256=b9aac0ebeafb21c08bf65f2039f4b2c5f78a3449d0a41df711d72445649e952a">pdfminer.six-20201018.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/pdfminer.six-20181108.tar.gz#sha256=9cc58857cf0a360213008061d903282462abee55cdcc7e0b6e08d6834e55050d">pdfminer.six-20181108.tar.gz</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/pdfminer.six-20220506.tar.gz#sha256=3d65c1a0f4a0465c709e191550ec77a684ebe0bcb562337ccbfb7aa228c52076">pdfminer.six-20220506.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/pdfminer.six-20211012-py3-none-any.whl#sha256=d3efb75c0249b51c1bf795e3a8bddf1726b276c77bf75fb136adea471ee2825b">pdfminer.six-20211012-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/pdfminer.six-20211012.tar.gz#sha256=0351f17d362ee2d48b158be52bcde6576d96460efd038a3e89a043fba6d634d7">pdfminer.six-20211012.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/pdfminer.six-20220319.tar.gz#sha256=eff2ce0abeaa4df94dc3461f70eab104487c7b4a2b3c7e9fd0aeec6c5f44d6a6">pdfminer.six-20220319.tar.gz</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/pdfminer.six-20220506-py3-none-any.whl#sha256=0960be95fe8724a4847f83d53d0331b890871f6035ba706841568caa2b541bf5">pdfminer.six-20220506-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/pdfminer.six-20220319-py3-none-any.whl#sha256=af0630f98a292bad4170f54e80f82ca81b916dd0b2c996437ec45c02f11d8762">pdfminer.six-20220319-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/pdfminer.six-20181108-py2.py3-none-any.whl#sha256=f04d029d1d3e58c87da51bdefef2e9a1dbf2d7b63f727dd2a3e36054f5ae96ea">pdfminer.six-20181108-py2.py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/pdfminer.six-20201018-py3-none-any.whl#sha256=d78877ba8d8bf957f3bb636c4f73f4f6f30f56c461993877ac22c39c20837509">pdfminer.six-20201018-py3-none-any.whl</a><br/>
