--- a/pypi/simple/regipy/index.html
+++ b/pypi/simple/regipy/index.html
@@ -6,9 +6,11 @@
   </head>
   <body>
     <a href="https://thirdparty.aboutcode.org/pypi/regipy-1.9.4-py3-none-any.whl#sha256=2dc4e9f5081545d40308ee4066457c8f80c76a0da8a664722f9bda3353728e8b">regipy-1.9.4-py3-none-any.whl</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/regipy-2.3.1.tar.gz#sha256=7583382c733011b604daca1d77a09a80a9c7f1cab1983a80b546d7f203bc5260">regipy-2.3.1.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/regipy-2.2.2.tar.gz#sha256=1c4efd310f72b199efaa7ceadc579045fbe7e96cb334775cd3f01a1700dda9fa">regipy-2.2.2.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/regipy-1.9.4.tar.gz#sha256=86de2da57ccd95fc08ea51fa7e4bef6ed8aa0ab37c4286124bed126bf178c448">regipy-1.9.4.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/regipy-2.0.0-py3-none-any.whl#sha256=8a524f41479d67a26585ecb50e369d45e1338828ef2be7bbf8500cdfcd7585c9">regipy-2.0.0-py3-none-any.whl</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/regipy-2.3.1-py3-none-any.whl#sha256=9509582284545849b564d803ee696393506f424d6806a8fef7715ec8d2588470">regipy-2.3.1-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/regipy-2.0.0.tar.gz#sha256=518a58e1e9dfa1b1e15eecf5640f7d918714d3dfdd8df8e6538f0e21140a2303">regipy-2.0.0.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/regipy-1.9.3-py3-none-any.whl#sha256=7c1e10e8245b084f6c6410cb53c074a94cf141646cea240b03a1e45f96fea1d3">regipy-1.9.3-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/regipy-2.3.0.tar.gz#sha256=d7d446fcf09c510fe2e896ec0db491c7fd8c842de812fc7383f553e38def7c95">regipy-2.3.0.tar.gz</a><br/>
