--- a/pypi/simple/links.html
+++ b/pypi/simple/links.html
@@ -485,9 +485,11 @@
     <a href="https://thirdparty.aboutcode.org/pypi/aboutcode_toolkit-5.1.0-py2.py3-none-any.whl#sha256=73e89a2be99681b09a0d9e469a4c3fe7e8f0a53cb59677674e0d5080355a632a">aboutcode_toolkit-5.1.0-py2.py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/pdfminer.six-20201018.tar.gz#sha256=b9aac0ebeafb21c08bf65f2039f4b2c5f78a3449d0a41df711d72445649e952a">pdfminer.six-20201018.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/pdfminer.six-20181108.tar.gz#sha256=9cc58857cf0a360213008061d903282462abee55cdcc7e0b6e08d6834e55050d">pdfminer.six-20181108.tar.gz</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/pdfminer.six-20220506.tar.gz#sha256=3d65c1a0f4a0465c709e191550ec77a684ebe0bcb562337ccbfb7aa228c52076">pdfminer.six-20220506.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/pdfminer.six-20211012-py3-none-any.whl#sha256=d3efb75c0249b51c1bf795e3a8bddf1726b276c77bf75fb136adea471ee2825b">pdfminer.six-20211012-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/pdfminer.six-20211012.tar.gz#sha256=0351f17d362ee2d48b158be52bcde6576d96460efd038a3e89a043fba6d634d7">pdfminer.six-20211012.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/pdfminer.six-20220319.tar.gz#sha256=eff2ce0abeaa4df94dc3461f70eab104487c7b4a2b3c7e9fd0aeec6c5f44d6a6">pdfminer.six-20220319.tar.gz</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/pdfminer.six-20220506-py3-none-any.whl#sha256=0960be95fe8724a4847f83d53d0331b890871f6035ba706841568caa2b541bf5">pdfminer.six-20220506-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/pdfminer.six-20220319-py3-none-any.whl#sha256=af0630f98a292bad4170f54e80f82ca81b916dd0b2c996437ec45c02f11d8762">pdfminer.six-20220319-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/pdfminer.six-20181108-py2.py3-none-any.whl#sha256=f04d029d1d3e58c87da51bdefef2e9a1dbf2d7b63f727dd2a3e36054f5ae96ea">pdfminer.six-20181108-py2.py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/pdfminer.six-20201018-py3-none-any.whl#sha256=d78877ba8d8bf957f3bb636c4f73f4f6f30f56c461993877ac22c39c20837509">pdfminer.six-20201018-py3-none-any.whl</a><br/>
@@ -1232,6 +1234,22 @@
     <a href="https://thirdparty.aboutcode.org/pypi/fingerprints-1.0.3.tar.gz#sha256=cafd5f92b5b91e4ce34af2b954da9c05b448a4778947785abb19a14f363352d0">fingerprints-1.0.3.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/fingerprints-1.0.1.tar.gz#sha256=b180a4868d53c2626b3b14004faaa18a23f0596c1de130676f963bd749153869">fingerprints-1.0.1.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/fingerprints-1.0.3-py2.py3-none-any.whl#sha256=9d485aec44fbeeeda1e712f661cc6d96aa40e282d48c411e8d3175ea14742c6a">fingerprints-1.0.3-py2.py3-none-any.whl</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/typecode-30.0.0-py3-none-any.whl#sha256=aa55b36c2b62c8d925df71b7c1184b8e85bc29ae4d4e21d1884a5afcc554206e">typecode-30.0.0-py3-none-any.whl</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/typecode-21.2.24-py3-none-any.whl#sha256=4d46d4c98fae2f6d018e8b293013061d2c2715278cf2e929ef8c56e9684294ea">typecode-21.2.24-py3-none-any.whl</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/typecode-21.6.1-py3-none-any.whl#sha256=06ec8e50a675cc2cc383e781f1e7bbee1f96eb9ed8be1cef554ea6a1c571fc43">typecode-21.6.1-py3-none-any.whl</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/typecode-21.1.21.tar.gz#sha256=e25225edf330ed14762d78856997e7cadf5b3eb6b4689a6db2a48ee23e1d4dec">typecode-21.1.21.tar.gz</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/typecode-21.1.9.1.tar.gz#sha256=e7107ccf06b53312c16b806fd1c9f778c6cad8a29678c156084af966d7e61d55">typecode-21.1.9.1.tar.gz</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/typecode-20.10.20.tar.gz#sha256=214d633804fc3e79b7cc8e2152baadfdcd62cfe02056ba797d2e5a388d4c9f95">typecode-20.10.20.tar.gz</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/typecode-21.1.8.1-py3-none-any.whl#sha256=a582ead3c2593efeb46c55432c06bb09072acb852aa3745ad6e15467d544f827">typecode-21.1.8.1-py3-none-any.whl</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/typecode-21.6.1.tar.gz#sha256=d3a82859df5607c900972e08e1bca31e3fe2daed37afd1b8231cad2ef613d8d6">typecode-21.6.1.tar.gz</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/typecode-21.1.21-py3-none-any.whl#sha256=d1a2d1ee7157d0b4bbfa52bd686360fbac197ef16847965e415399c6b3bcaef6">typecode-21.1.21-py3-none-any.whl</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/typecode-21.1.9.1-py3-none-any.whl#sha256=289a975885818cbff7529fd27edb5b5ae63e745da38c8edbea35a53c9d84e47f">typecode-21.1.9.1-py3-none-any.whl</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/typecode-21.1.8.1.tar.gz#sha256=4423544648761dd2287ffca3d49830bce38342a212ee991aa7aeaa3b32f4a325">typecode-21.1.8.1.tar.gz</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/typecode-21.2.24.tar.gz#sha256=eaac8aee0b9c6142ad44671252ba00748202d218347d1c0451ce6cd76561e01b">typecode-21.2.24.tar.gz</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/typecode-20.10.20-py2.py3-none-any.whl#sha256=a481e019e41d7c83ca55cd589ae92fc7cabb5587b1a8347c737c3c87038035e5">typecode-20.10.20-py2.py3-none-any.whl</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/typecode-20.10.12.tar.gz#sha256=a4aecbd5d8ca7bf0dd8d01b1021bf982eccae86f432c1d43314f49fa86c063df">typecode-20.10.12.tar.gz</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/typecode-20.10.12-py2.py3-none-any.whl#sha256=0067384f3dd67648ca128bf19b4957d2f8d5a8b9bcee8d0a125dc5bd648e4e16">typecode-20.10.12-py2.py3-none-any.whl</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/typecode-30.0.0.tar.gz#sha256=a5118b53fc73410a8364c22caead45cbb560188a458e71eda663bec8beede20f">typecode-30.0.0.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/pexpect-4.8.0.tar.gz#sha256=fc65a43959d153d0114afe13997d439c22823a27cefceb5ff35c2178c6784c0c">pexpect-4.8.0.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/pexpect-4.8.0-py2.py3-none-any.whl#sha256=0b48a55dcb3c05f3329815901ea4fc1537514d6ba867a152b581d69ae3710937">pexpect-4.8.0-py2.py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/sphinxcontrib-django2-1.5.tar.gz#sha256=c60962009fcac99c65b091a188814f4fa9b080042e92f117582cdef9b7ff0e56">sphinxcontrib-django2-1.5.tar.gz</a><br/>
@@ -1665,20 +1683,6 @@
     <a href="https://thirdparty.aboutcode.org/pypi/XlsxWriter-3.0.3.tar.gz#sha256=e89f4a1d2fa2c9ea15cde77de95cd3fd8b0345d0efb3964623f395c8c4988b7f">XlsxWriter-3.0.3.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/XlsxWriter-3.0.3-py3-none-any.whl#sha256=df0aefe5137478d206847eccf9f114715e42aaea077e6a48d0e8a2152e983010">XlsxWriter-3.0.3-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/XlsxWriter-1.2.8-py2.py3-none-any.whl#sha256=97ab487b81534415c5313154203f3e8a637d792b1e6a8201e8f7f71da0203c2a">XlsxWriter-1.2.8-py2.py3-none-any.whl</a><br/>
-    <a href="https://thirdparty.aboutcode.org/pypi/typecode-21.2.24-py3-none-any.whl#sha256=4d46d4c98fae2f6d018e8b293013061d2c2715278cf2e929ef8c56e9684294ea">typecode-21.2.24-py3-none-any.whl</a><br/>
-    <a href="https://thirdparty.aboutcode.org/pypi/typecode-21.6.1-py3-none-any.whl#sha256=06ec8e50a675cc2cc383e781f1e7bbee1f96eb9ed8be1cef554ea6a1c571fc43">typecode-21.6.1-py3-none-any.whl</a><br/>
-    <a href="https://thirdparty.aboutcode.org/pypi/typecode-21.1.21.tar.gz#sha256=e25225edf330ed14762d78856997e7cadf5b3eb6b4689a6db2a48ee23e1d4dec">typecode-21.1.21.tar.gz</a><br/>
-    <a href="https://thirdparty.aboutcode.org/pypi/typecode-21.1.9.1.tar.gz#sha256=e7107ccf06b53312c16b806fd1c9f778c6cad8a29678c156084af966d7e61d55">typecode-21.1.9.1.tar.gz</a><br/>
-    <a href="https://thirdparty.aboutcode.org/pypi/typecode-20.10.20.tar.gz#sha256=214d633804fc3e79b7cc8e2152baadfdcd62cfe02056ba797d2e5a388d4c9f95">typecode-20.10.20.tar.gz</a><br/>
-    <a href="https://thirdparty.aboutcode.org/pypi/typecode-21.1.8.1-py3-none-any.whl#sha256=a582ead3c2593efeb46c55432c06bb09072acb852aa3745ad6e15467d544f827">typecode-21.1.8.1-py3-none-any.whl</a><br/>
-    <a href="https://thirdparty.aboutcode.org/pypi/typecode-21.6.1.tar.gz#sha256=d3a82859df5607c900972e08e1bca31e3fe2daed37afd1b8231cad2ef613d8d6">typecode-21.6.1.tar.gz</a><br/>
-    <a href="https://thirdparty.aboutcode.org/pypi/typecode-21.1.21-py3-none-any.whl#sha256=d1a2d1ee7157d0b4bbfa52bd686360fbac197ef16847965e415399c6b3bcaef6">typecode-21.1.21-py3-none-any.whl</a><br/>
-    <a href="https://thirdparty.aboutcode.org/pypi/typecode-21.1.9.1-py3-none-any.whl#sha256=289a975885818cbff7529fd27edb5b5ae63e745da38c8edbea35a53c9d84e47f">typecode-21.1.9.1-py3-none-any.whl</a><br/>
-    <a href="https://thirdparty.aboutcode.org/pypi/typecode-21.1.8.1.tar.gz#sha256=4423544648761dd2287ffca3d49830bce38342a212ee991aa7aeaa3b32f4a325">typecode-21.1.8.1.tar.gz</a><br/>
-    <a href="https://thirdparty.aboutcode.org/pypi/typecode-21.2.24.tar.gz#sha256=eaac8aee0b9c6142ad44671252ba00748202d218347d1c0451ce6cd76561e01b">typecode-21.2.24.tar.gz</a><br/>
-    <a href="https://thirdparty.aboutcode.org/pypi/typecode-20.10.20-py2.py3-none-any.whl#sha256=a481e019e41d7c83ca55cd589ae92fc7cabb5587b1a8347c737c3c87038035e5">typecode-20.10.20-py2.py3-none-any.whl</a><br/>
-    <a href="https://thirdparty.aboutcode.org/pypi/typecode-20.10.12.tar.gz#sha256=a4aecbd5d8ca7bf0dd8d01b1021bf982eccae86f432c1d43314f49fa86c063df">typecode-20.10.12.tar.gz</a><br/>
-    <a href="https://thirdparty.aboutcode.org/pypi/typecode-20.10.12-py2.py3-none-any.whl#sha256=0067384f3dd67648ca128bf19b4957d2f8d5a8b9bcee8d0a125dc5bd648e4e16">typecode-20.10.12-py2.py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/rfc3986-2.0.0.tar.gz#sha256=97aacf9dbd4bfd829baad6e6309fa6573aaf1be3f6fa735c8ab05e46cecb261c">rfc3986-2.0.0.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/rfc3986-1.5.0.tar.gz#sha256=270aaf10d87d0d4e095063c65bf3ddbc6ee3d0b226328ce21e036f946e421835">rfc3986-1.5.0.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/rfc3986-1.5.0-py2.py3-none-any.whl#sha256=a86d6e1f5b1dc238b218b012df0aa79409667bb209e58da56d0b94704e712a97">rfc3986-1.5.0-py2.py3-none-any.whl</a><br/>
@@ -1830,9 +1834,11 @@
     <a href="https://thirdparty.aboutcode.org/pypi/nltk-3.4.5.zip#sha256=bed45551259aa2101381bbdd5df37d44ca2669c5c3dad72439fa459b29137d94">nltk-3.4.5.zip</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/nltk-3.6.2-py3-none-any.whl#sha256=240e23ab1ab159ef9940777d30c7c72d7e76d91877099218a7585370c11f6b9e">nltk-3.6.2-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/regipy-1.9.4-py3-none-any.whl#sha256=2dc4e9f5081545d40308ee4066457c8f80c76a0da8a664722f9bda3353728e8b">regipy-1.9.4-py3-none-any.whl</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/regipy-2.3.1.tar.gz#sha256=7583382c733011b604daca1d77a09a80a9c7f1cab1983a80b546d7f203bc5260">regipy-2.3.1.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/regipy-2.2.2.tar.gz#sha256=1c4efd310f72b199efaa7ceadc579045fbe7e96cb334775cd3f01a1700dda9fa">regipy-2.2.2.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/regipy-1.9.4.tar.gz#sha256=86de2da57ccd95fc08ea51fa7e4bef6ed8aa0ab37c4286124bed126bf178c448">regipy-1.9.4.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/regipy-2.0.0-py3-none-any.whl#sha256=8a524f41479d67a26585ecb50e369d45e1338828ef2be7bbf8500cdfcd7585c9">regipy-2.0.0-py3-none-any.whl</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/regipy-2.3.1-py3-none-any.whl#sha256=9509582284545849b564d803ee696393506f424d6806a8fef7715ec8d2588470">regipy-2.3.1-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/regipy-2.0.0.tar.gz#sha256=518a58e1e9dfa1b1e15eecf5640f7d918714d3dfdd8df8e6538f0e21140a2303">regipy-2.0.0.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/regipy-1.9.3-py3-none-any.whl#sha256=7c1e10e8245b084f6c6410cb53c074a94cf141646cea240b03a1e45f96fea1d3">regipy-1.9.3-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/regipy-2.3.0.tar.gz#sha256=d7d446fcf09c510fe2e896ec0db491c7fd8c842de812fc7383f553e38def7c95">regipy-2.3.0.tar.gz</a><br/>
