--- a/pypi/simple/typecode/index.html
+++ b/pypi/simple/typecode/index.html
@@ -5,6 +5,7 @@
     <title>Links for typecode</title>
   </head>
   <body>
+    <a href="https://thirdparty.aboutcode.org/pypi/typecode-30.0.0-py3-none-any.whl#sha256=aa55b36c2b62c8d925df71b7c1184b8e85bc29ae4d4e21d1884a5afcc554206e">typecode-30.0.0-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/typecode-21.2.24-py3-none-any.whl#sha256=4d46d4c98fae2f6d018e8b293013061d2c2715278cf2e929ef8c56e9684294ea">typecode-21.2.24-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/typecode-21.6.1-py3-none-any.whl#sha256=06ec8e50a675cc2cc383e781f1e7bbee1f96eb9ed8be1cef554ea6a1c571fc43">typecode-21.6.1-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/typecode-21.1.21.tar.gz#sha256=e25225edf330ed14762d78856997e7cadf5b3eb6b4689a6db2a48ee23e1d4dec">typecode-21.1.21.tar.gz</a><br/>
@@ -19,5 +20,6 @@
     <a href="https://thirdparty.aboutcode.org/pypi/typecode-20.10.20-py2.py3-none-any.whl#sha256=a481e019e41d7c83ca55cd589ae92fc7cabb5587b1a8347c737c3c87038035e5">typecode-20.10.20-py2.py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/typecode-20.10.12.tar.gz#sha256=a4aecbd5d8ca7bf0dd8d01b1021bf982eccae86f432c1d43314f49fa86c063df">typecode-20.10.12.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/typecode-20.10.12-py2.py3-none-any.whl#sha256=0067384f3dd67648ca128bf19b4957d2f8d5a8b9bcee8d0a125dc5bd648e4e16">typecode-20.10.12-py2.py3-none-any.whl</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/typecode-30.0.0.tar.gz#sha256=a5118b53fc73410a8364c22caead45cbb560188a458e71eda663bec8beede20f">typecode-30.0.0.tar.gz</a><br/>
   </body>
 </html>
