--- a/pypi/simple/regipy/index.html
+++ b/pypi/simple/regipy/index.html
@@ -8,6 +8,8 @@
     <a href="https://thirdparty.aboutcode.org/pypi/regipy-1.9.4-py3-none-any.whl#sha256=2dc4e9f5081545d40308ee4066457c8f80c76a0da8a664722f9bda3353728e8b">regipy-1.9.4-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/regipy-2.3.1.tar.gz#sha256=7583382c733011b604daca1d77a09a80a9c7f1cab1983a80b546d7f203bc5260">regipy-2.3.1.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/regipy-2.2.2.tar.gz#sha256=1c4efd310f72b199efaa7ceadc579045fbe7e96cb334775cd3f01a1700dda9fa">regipy-2.2.2.tar.gz</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/regipy-2.3.2.tar.gz#sha256=946946d2a3343cd5fdbff1c34601e63a5b94b6a6498c17ec80ef88ed37f0c43a">regipy-2.3.2.tar.gz</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/regipy-2.3.2-py3-none-any.whl#sha256=35130c89ddab019273271e3999a5e8e07d4c8c49cf3a3946920fbbd8bfd4f52e">regipy-2.3.2-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/regipy-1.9.4.tar.gz#sha256=86de2da57ccd95fc08ea51fa7e4bef6ed8aa0ab37c4286124bed126bf178c448">regipy-1.9.4.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/regipy-2.0.0-py3-none-any.whl#sha256=8a524f41479d67a26585ecb50e369d45e1338828ef2be7bbf8500cdfcd7585c9">regipy-2.0.0-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/regipy-2.3.1-py3-none-any.whl#sha256=9509582284545849b564d803ee696393506f424d6806a8fef7715ec8d2588470">regipy-2.3.1-py3-none-any.whl</a><br/>
