Add new versions
Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/pypi/simple/index.html
+++ b/pypi/simple/index.html
@@ -235,6 +235,7 @@
 <a href="semver/">semver</a><br/>
 <a href="social-auth-core/">social-auth-core</a><br/>
 <a href="smmap/">smmap</a><br/>
+<a href="commonmark/">commonmark</a><br/>
 <a href="gitpython/">gitpython</a><br/>
 <a href="debut/">debut</a><br/>
 <a href="anyjson/">anyjson</a><br/>
@@ -328,7 +329,9 @@
 <a href="python-mimeparse/">python-mimeparse</a><br/>
 <a href="traitlets/">traitlets</a><br/>
 <a href="jedi/">jedi</a><br/>
+<a href="rich/">rich</a><br/>
 <a href="coreschema/">coreschema</a><br/>
+<a href="pep517/">pep517</a><br/>
 <a href="async-timeout/">async-timeout</a><br/>
 <a href="dowsing/">dowsing</a><br/>
 <a href="pyopenssl/">pyopenssl</a><br/>
