--- a/pypi/simple/license-expression/index.html
+++ b/pypi/simple/license-expression/index.html
@@ -6,8 +6,10 @@
   </head>
   <body>
     <a href="https://thirdparty.aboutcode.org/pypi/license-expression-21.6.14.tar.gz#sha256=9de87a427c9a449eee7913472fb9ed03b63036295547369fdbf95f76a8b924b2">license-expression-21.6.14.tar.gz</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/license-expression-30.0.0.tar.gz#sha256=ad638292aa8493f84354909b517922cb823582c2ce2c4d880e42544a86bea8dd">license-expression-30.0.0.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/license_expression-21.6.14-py3-none-any.whl#sha256=324246eed8e138b4139fefdc0e9dc4161d5075e3929e56983966d37298dca30e">license_expression-21.6.14-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/license-expression-1.2.tar.gz#sha256=7960e1dfdf20d127e75ead931476f2b5c7556df05b117a73880b22ade17d1abc">license-expression-1.2.tar.gz</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/license_expression-30.0.0-py3-none-any.whl#sha256=e95325110110eb2b7539ee7773b97a0724d5371ec563cc718c8cac0e38cc40cc">license_expression-30.0.0-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/license_expression-1.2-py2.py3-none-any.whl#sha256=6d97906380cecfc758a77f6d38c6760f2afade7e83d2b8295e234fe21f486fb8">license_expression-1.2-py2.py3-none-any.whl</a><br/>
   </body>
 </html>
