--- a/pypi/simple/readme-renderer/index.html
+++ b/pypi/simple/readme-renderer/index.html
@@ -8,7 +8,9 @@
     <a href="https://thirdparty.aboutcode.org/pypi/readme_renderer-32.0.tar.gz#sha256=b512beafa6798260c7d5af3e1b1f097e58bfcd9a575da7c4ddd5e037490a5b85">readme_renderer-32.0.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/readme_renderer-28.0.tar.gz#sha256=6b7e5aa59210a40de72eb79931491eaf46fefca2952b9181268bd7c7c65c260a">readme_renderer-28.0.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/readme_renderer-28.0-py2.py3-none-any.whl#sha256=267854ac3b1530633c2394ead828afcd060fc273217c42ac36b6be9c42cd9a9d">readme_renderer-28.0-py2.py3-none-any.whl</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/readme_renderer-34.0.tar.gz#sha256=dfb4d17f21706d145f7473e0b61ca245ba58e810cf9b2209a48239677f82e5b0">readme_renderer-34.0.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/readme_renderer-30.0.tar.gz#sha256=8299700d7a910c304072a7601eafada6712a5b011a20139417e1b1e9f04645d8">readme_renderer-30.0.tar.gz</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/readme_renderer-34.0-py3-none-any.whl#sha256=262510fe6aae81ed4e94d8b169077f325614c0b1a45916a80442c6576264a9c2">readme_renderer-34.0-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/readme_renderer-32.0-py3-none-any.whl#sha256=a50a0f2123a4c1145ac6f420e1a348aafefcc9211c846e3d51df05fe3d865b7d">readme_renderer-32.0-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/readme_renderer-30.0-py2.py3-none-any.whl#sha256=3286806450d9961d6e3b5f8a59f77e61503799aca5155c8d8d40359b4e1e1adc">readme_renderer-30.0-py2.py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/readme_renderer-35.0.tar.gz#sha256=a727999acfc222fc21d82a12ed48c957c4989785e5865807c65a487d21677497">readme_renderer-35.0.tar.gz</a><br/>
