--- a/pypi/simple/index.html
+++ b/pypi/simple/index.html
@@ -223,6 +223,7 @@
 <a href="chardet/">chardet</a><br/>
 <a href="djangorestframework/">djangorestframework</a><br/>
 <a href="pathlib2/">pathlib2</a><br/>
+<a href="python-inspector/">python-inspector</a><br/>
 <a href="typing/">typing</a><br/>
 <a href="pygments/">pygments</a><br/>
 <a href="rich/">rich</a><br/>
@@ -311,6 +312,7 @@
 <a href="testfixtures/">testfixtures</a><br/>
 <a href="scandir/">scandir</a><br/>
 <a href="spdx-tools/">spdx-tools</a><br/>
+<a href="tinynetrc/">tinynetrc</a><br/>
 <a href="parameter-expansion/">parameter-expansion</a><br/>
 <a href="ndg-httpsclient/">ndg-httpsclient</a><br/>
 <a href="backports-entry-points-selectable/">backports-entry-points-selectable</a><br/>
