--- a/pypi/simple/links.html
+++ b/pypi/simple/links.html
@@ -2299,10 +2299,12 @@
     <a href="https://thirdparty.aboutcode.org/pypi/attrs-20.3.0-py2.py3-none-any.whl#sha256=31b2eced602aa8423c2aea9c76a724617ed67cf9513173fd3a4f03e3a929c7e6">attrs-20.3.0-py2.py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/attrs-21.2.0.tar.gz#sha256=ef6aaac3ca6cd92904cdd0d83f629a15f18053ec84e6432106f7a4d04ae4f5fb">attrs-21.2.0.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/attrs-19.3.0-py2.py3-none-any.whl#sha256=08a96c641c3a74e44eb59afb61a24f2cb9f4d7188748e76ba4bb5edfa3cb7d1c">attrs-19.3.0-py2.py3-none-any.whl</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/attrs-22.1.0.tar.gz#sha256=29adc2665447e5191d0e7c568fde78b21f9672d344281d0c6e1ab085429b22b6">attrs-22.1.0.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/attrs-19.3.0.tar.gz#sha256=f7b7ce16570fe9965acd6d30101a28f62fb4a7f9e926b3bbc9b61f8b04247e72">attrs-19.3.0.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/attrs-21.4.0.tar.gz#sha256=626ba8234211db98e869df76230a137c4c40a12d72445c45d5f5b716f076e2fd">attrs-21.4.0.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/attrs-20.3.0.tar.gz#sha256=832aa3cde19744e49938b91fea06d69ecb9e649c93ba974535d08ad92164f700">attrs-20.3.0.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/attrs-21.2.0-py2.py3-none-any.whl#sha256=149e90d6d8ac20db7a955ad60cf0e6881a3f20d37096140088356da6c716b0b1">attrs-21.2.0-py2.py3-none-any.whl</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/attrs-22.1.0-py2.py3-none-any.whl#sha256=86efa402f67bf2df34f51a335487cf46b1ec130d02b8d39fd248abfd30da551c">attrs-22.1.0-py2.py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/typecode_libmagic-5.39.210122-py3-none-manylinux2014_x86_64.whl#sha256=43f0c0c7d39583c7bd44f138ba618f70ac4930ca9a95bf66ccc1a22f69db0d01">typecode_libmagic-5.39.210122-py3-none-manylinux2014_x86_64.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/typecode_libmagic-5.39.210122-py3-none-macosx_10_13_intel.whl#sha256=ec8b5cdb2f72062c895cd3b8ae00bfcbc14cf916e0bb4ac4bbd91950937f8eae">typecode_libmagic-5.39.210122-py3-none-macosx_10_13_intel.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/typecode_libmagic-5.39.1.1-py2.py3-none-manylinux2014_x86_64.whl#sha256=0538f7c9234799adc0223fcc98a626db4823f6391719b0cc1a6019f1c52e0869">typecode_libmagic-5.39.1.1-py2.py3-none-manylinux2014_x86_64.whl</a><br/>
@@ -2454,6 +2456,8 @@
     <a href="https://thirdparty.aboutcode.org/pypi/pathlib2-2.3.5.tar.gz#sha256=6cd9a47b597b37cc57de1c05e56fb1a1c9cc9fab04fe78c29acd090418529868">pathlib2-2.3.5.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/pathlib2-2.3.7.post1-py2.py3-none-any.whl#sha256=5266a0fd000452f1b3467d782f079a4343c63aaa119221fbdc4e39577489ca5b">pathlib2-2.3.7.post1-py2.py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/pathlib2-2.3.7.post1.tar.gz#sha256=9fe0edad898b83c0c3e199c842b27ed216645d2e177757b2dd67384d4113c641">pathlib2-2.3.7.post1.tar.gz</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/python-inspector-0.6.2.tar.gz#sha256=3a34c2d9cd85779b5ea6fb918e102a0d82129358df69afdb895319388adc19cb">python-inspector-0.6.2.tar.gz</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/python_inspector-0.6.2-py3-none-any.whl#sha256=e4d9b55fda78715e49397be5fd2e48ff11c79a9b8fa9744726000a29003bae54">python_inspector-0.6.2-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/typing-3.6.4-py3-none-any.whl#sha256=3a887b021a77b292e151afb75323dea88a7bc1b3dfa92176cff8e44c8b68bddf">typing-3.6.4-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/typing-3.6.6.tar.gz#sha256=4027c5f6127a6267a435201981ba156de91ad0d1d98e9ddc2aa173453453492d">typing-3.6.6.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/typing-3.10.0.0.tar.gz#sha256=13b4ad211f54ddbf93e5901a9967b1e07720c1d1b78d596ac6a439641aa1b130">typing-3.10.0.0.tar.gz</a><br/>
@@ -2770,6 +2774,8 @@
     <a href="https://thirdparty.aboutcode.org/pypi/spdx_tools-0.6.1-py2.py3-none-any.whl#sha256=45fa09d43534772ca63bff2dccf1fbde88e1fc9b9515fc7a34ae50540d7ad29c">spdx_tools-0.6.1-py2.py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/spdx-tools-0.6.1.tar.gz#sha256=9a1aaae051771e865705dd2fd374c3f73d0ad595c1056548466997551cbd7a81">spdx-tools-0.6.1.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/spdx_tools-0.7.0a3-py3-none-any.whl#sha256=79c96d3e7743feda41176588ca59016578ed20ca7b4962eeff2a9850b2f76c60">spdx_tools-0.7.0a3-py3-none-any.whl</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/tinynetrc-1.3.1.tar.gz#sha256=2b9a256d2e630643b8f0985f5e826ccf0bf3716e07e596a4f67feab363d254df">tinynetrc-1.3.1.tar.gz</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/tinynetrc-1.3.1-py2.py3-none-any.whl#sha256=46c7820e5f49c9434d2c4cd74de8a06edbbd45e63a8a2980a90b8a43db8facf7">tinynetrc-1.3.1-py2.py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/parameter-expansion-0.2.0.tar.gz#sha256=2ec886a657d3ee49e40d68574b1a5390318071b0c7208daf9f1143eee26511ab">parameter-expansion-0.2.0.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/parameter_expansion-0.2.0-py3-none-any.whl#sha256=40d33a6e892dca848ccb930167acec45859fe6965dd1058493e174ddcd8496ae">parameter_expansion-0.2.0-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/ndg_httpsclient-0.5.1-py3-none-any.whl#sha256=dd174c11d971b6244a891f7be2b32ca9853d3797a72edb34fa5d7b07d8fff7d4">ndg_httpsclient-0.5.1-py3-none-any.whl</a><br/>
