--- a/pypi/simple/links.html
+++ b/pypi/simple/links.html
@@ -1841,8 +1841,10 @@
     <a href="https://thirdparty.aboutcode.org/pypi/regipy-2.3.1-py3-none-any.whl#sha256=9509582284545849b564d803ee696393506f424d6806a8fef7715ec8d2588470">regipy-2.3.1-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/regipy-2.0.0.tar.gz#sha256=518a58e1e9dfa1b1e15eecf5640f7d918714d3dfdd8df8e6538f0e21140a2303">regipy-2.0.0.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/regipy-1.9.3-py3-none-any.whl#sha256=7c1e10e8245b084f6c6410cb53c074a94cf141646cea240b03a1e45f96fea1d3">regipy-1.9.3-py3-none-any.whl</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/regipy-3.1.0-py3-none-any.whl#sha256=ae5f9d02020ce67c671ea7ce0baa60dc72effb37eac522e604280bf3e69c5433">regipy-3.1.0-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/regipy-2.3.0.tar.gz#sha256=d7d446fcf09c510fe2e896ec0db491c7fd8c842de812fc7383f553e38def7c95">regipy-2.3.0.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/regipy-1.9.3.tar.gz#sha256=86cdd32eb1148273fd0ac621ddb7dafc494b7f67cd4e9df27ed11a985464fc7a">regipy-1.9.3.tar.gz</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/regipy-3.1.0.tar.gz#sha256=7d65ed76eb0232fd37537751e5ae54264afdeae5678807eee6b6006387ee0377">regipy-3.1.0.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/regipy-2.3.0-py3-none-any.whl#sha256=ded1a75d8bc777e8439990294b7cb4e7ff1fd28b7bb1fe2f75252de9107eede5">regipy-2.3.0-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/regipy-2.2.2-py3-none-any.whl#sha256=0aa146fa56936a65f6380c859df601a251c8cc231737da7dfa682339bfec5184">regipy-2.2.2-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/django_filter-2.3.0-py3-none-any.whl#sha256=616848eab6fc50193a1b3730140c49b60c57a3eda1f7fc57fa8505ac156c6c75">django_filter-2.3.0-py3-none-any.whl</a><br/>
