--- a/pypi/simple/commoncode/index.html
+++ b/pypi/simple/commoncode/index.html
@@ -13,6 +13,7 @@
     <a href="https://thirdparty.aboutcode.org/pypi/commoncode-21.7.23-py3-none-any.whl#sha256=b19906a898617c688eb560bba04fc456227c2b2fda77956e81aaa003ba82d131">commoncode-21.7.23-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/commoncode-21.1.21.tar.gz#sha256=6e2daa34fac2d91307b23d9df5f01a6168fdffb12bf5d161bd6776bade29b479">commoncode-21.1.21.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/commoncode-31.0.0b4-py3-none-any.whl#sha256=cddc20b18a3cc1868b701450bfcf3acfb3a9e8721c57a57d33ca34167d1b52bf">commoncode-31.0.0b4-py3-none-any.whl</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/commoncode-31.0.0-py3-none-any.whl#sha256=4d3610fd1a9dff232b14aa6e2d877b568a2c7acefad6f8492d345d17e7672d11">commoncode-31.0.0-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/commoncode-21.5.12.tar.gz#sha256=5a98e71d9789f7debfc1ed8085d1de3c88631fc8c2a15e93a69f61e6dcbab620">commoncode-21.5.12.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/commoncode-30.1.2.tar.gz#sha256=0ad42f0de24be7e2ef02ba1f2dfe032f44cc22f9f7eacc86907fd64d939ff2e0">commoncode-30.1.2.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/commoncode-30.0.0.tar.gz#sha256=e92794e2eea97c3b860a009800ee5f75b581c56f573775af33c8fa0f05251703">commoncode-30.0.0.tar.gz</a><br/>
@@ -24,6 +25,7 @@
     <a href="https://thirdparty.aboutcode.org/pypi/commoncode-30.1.1-py3-none-any.whl#sha256=6938399a46eaab9f814ec9c71d43ec15a96c75706546fac14daf592109d7ea34">commoncode-30.1.1-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/commoncode-30.2.0.tar.gz#sha256=ee470359fc3833b6e87b40013b8a1bd5df973b56314bddb89ad1844ef1e835fd">commoncode-30.2.0.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/commoncode-21.5.25-py3-none-any.whl#sha256=4fea3d71e6681db69952e502bc1ea0df15430e1fc0063b2599bd72e27bb98a44">commoncode-21.5.25-py3-none-any.whl</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/commoncode-31.0.0.tar.gz#sha256=897ec78ec6d6f6b5201b7e576a5a9f5e1dbef3dbc48b08ac87dd0518ea64cd1a">commoncode-31.0.0.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/commoncode-21.6.11.tar.gz#sha256=d6c8c985746a541913d5bb534c770f2422e5b4ac7a4ef765abc05c287a40ff4b">commoncode-21.6.11.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/commoncode-30.0.0-py3-none-any.whl#sha256=20b0c2c48b3dfe4c15e8a235f8b7db5c2fd00a110981edb888ff4513e37da49f">commoncode-30.0.0-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/commoncode-31.0.0b4.tar.gz#sha256=cd216ecdd4704cf28fe032b002affb1d57da8d64d847992e1c20fde40563fd66">commoncode-31.0.0b4.tar.gz</a><br/>
