--- a/pypi/simple/debian-inspector/index.html
+++ b/pypi/simple/debian-inspector/index.html
@@ -5,11 +5,13 @@
     <title>Links for debian-inspector</title>
   </head>
   <body>
+    <a href="https://thirdparty.aboutcode.org/pypi/debian_inspector-31.0.0.tar.gz#sha256=46094f953464b269bb09855eadeee3c92cb6b487a0bfa26eba537b52cc3d6b47">debian_inspector-31.0.0.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/debian_inspector-31.0.0b1-py3-none-any.whl#sha256=1f8b5b89e9b77a3d439d3c1d55f51f14074547aeb37fb537e5bcd19bb177d3ec">debian_inspector-31.0.0b1-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/debian_inspector-21.5.25.tar.gz#sha256=5c619eaeb2ebb4b7010eda15141cf6738db3b0171527316d415b4d0038567db4">debian_inspector-21.5.25.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/debian_inspector-0.9.10-py2.py3-none-any.whl#sha256=d2a01c74e70897f5dc307b813203f366f9bde2fa7ead56895c2bd875e65cf144">debian_inspector-0.9.10-py2.py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/debian_inspector-21.5.25-py3-none-any.whl#sha256=d5f5542e584e5f218903e14333112326e295a07bfb4e8cdfcdd2a51482610a4e">debian_inspector-21.5.25-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/debian_inspector-30.0.0.tar.gz#sha256=d0f4f9b13e9a75aaa0610b568e4b35db2b34cf50b79f5d7a69e25a10a47f5b18">debian_inspector-30.0.0.tar.gz</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/debian_inspector-31.0.0-py3-none-any.whl#sha256=db477fd2da64f832ad0d24797052055c44d530c79fa3df417b18cb00d26cfddc">debian_inspector-31.0.0-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/debian_inspector-31.0.0b1.tar.gz#sha256=0b9c79210172620b0f96885ad51c9f8b597189e0f9ef055aeb5d3f90b47d9e55">debian_inspector-31.0.0b1.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/debian_inspector-30.0.0-py3-none-any.whl#sha256=f6b706be9c8087521fdd0226c92433f2405182cb16949fe3455805754e19b6ef">debian_inspector-30.0.0-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/debian_inspector-0.9.10.tar.gz#sha256=fd29a02b925a4de0d7bb00c29bb05f19715a304bc10ef7b9ad06a93893dc3a8c">debian_inspector-0.9.10.tar.gz</a><br/>
