--- a/pypi/simple/links.html
+++ b/pypi/simple/links.html
@@ -1708,7 +1708,9 @@
     <a href="https://thirdparty.aboutcode.org/pypi/plugincode-20.9.tar.gz#sha256=dd7ac8705687f79d94d8b3834a08f314b1601a3526300239f38ebd967c9db5c1">plugincode-20.9.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/plugincode-31.0.0b1-py3-none-any.whl#sha256=dde4402b94f81b59e63b3a7e0fce221c8fe564d1bef78e61a5346b2be3b3fa7a">plugincode-31.0.0b1-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/plugincode-21.1.21-py3-none-any.whl#sha256=94634893146e5cde97ee9774fe983e7cb78dee9f147687d0a1d6a2d6ad8738eb">plugincode-21.1.21-py3-none-any.whl</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/plugincode-31.0.0.tar.gz#sha256=d017dd1d09ff2a072de194f7e0a84c80c0b79d2d2e9c4de22fb0e25838570d29">plugincode-31.0.0.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/plugincode-30.0.0-py3-none-any.whl#sha256=6d38f0d2778c56fd9e344f08478e3cf4177cef198e4851ad19f11123892124b5">plugincode-30.0.0-py3-none-any.whl</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/plugincode-31.0.0-py3-none-any.whl#sha256=41e06966a1f6b9af0c34e10587147be105f536773dfbb62120652f25780979d1">plugincode-31.0.0-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/plugincode-31.0.0b1.tar.gz#sha256=815548ee020ed4c509765c047ca06fb1a4310ef60db023798592a82e0b2640f1">plugincode-31.0.0b1.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/plugincode-21.1.15.tar.gz#sha256=a7dc8c053a486e4a324d19d77f9df0e96150bceb10005b493ac1c13ee3b78640">plugincode-21.1.15.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/plugincode-30.0.0.tar.gz#sha256=4237100af865681cdc6c107c30885bb31e1c472ed791dbd47261bbacce3c4a8b">plugincode-30.0.0.tar.gz</a><br/>
