--- a/pypi/simple/index.html
+++ b/pypi/simple/index.html
@@ -195,6 +195,7 @@
 <a href="texttable/">texttable</a><br/>
 <a href="gitdb/">gitdb</a><br/>
 <a href="wcwidth/">wcwidth</a><br/>
+<a href="python-frontmatter/">python-frontmatter</a><br/>
 <a href="reppy/">reppy</a><br/>
 <a href="beautifulsoup4/">beautifulsoup4</a><br/>
 <a href="drf-spectacular/">drf-spectacular</a><br/>
