--- a/pypi/simple/links.html
+++ b/pypi/simple/links.html
@@ -1846,10 +1846,12 @@
     <a href="https://thirdparty.aboutcode.org/pypi/packageurl-python-0.10.0.tar.gz#sha256=99df143960b7100fff3b2cf5b0beba2f64b6d8c818f6c9f125aed6fac7438763">packageurl-python-0.10.0.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/packageurl_python-0.9.4-py2.py3-none-any.whl#sha256=65f1eade0f3f412bdc77401e76725e9fc21d0c742ba0f2d066113cb19ccd8b61">packageurl_python-0.9.4-py2.py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/packageurl_python-0.10.2-py3-none-any.whl#sha256=ff6a4271ca6e433bcd1f51daf47f5f9d9b7229d9137cf2b16ad3e8a5a847d91d">packageurl_python-0.10.2-py3-none-any.whl</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/packageurl-python-0.10.3.tar.gz#sha256=a01371a9015fb5c1a3c62eb2f7250b87d1733fced57f075e30715eb8e15e075d">packageurl-python-0.10.3.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/packageurl_python-0.9.6-py3-none-any.whl#sha256=676dcb8278721df952e2444bfcd8d7bf3518894498050f0c6a5faddbe0860cd0">packageurl_python-0.9.6-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/packageurl_python-0.10.0-py3-none-any.whl#sha256=c7dc928aaa9465f04c86eaa956c75247d5f140ec8d50bc111b55314f143324bb">packageurl_python-0.10.0-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/packageurl-python-0.9.3.tar.gz#sha256=c54add03a464d4779ee50350231aabb971751bbf52389acbcd0149e2ea7122aa">packageurl-python-0.9.3.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/packageurl-python-0.10.2.tar.gz#sha256=b2e58533888ebb441f56faaef324a0df20e4f700505346c3cabe9a713ee7c842">packageurl-python-0.10.2.tar.gz</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/packageurl_python-0.10.3-py3-none-any.whl#sha256=aefef9565ff9800147725ba96a7ee68a2f75e49d0ac5a6ad6a7fb1ddb90eb748">packageurl_python-0.10.3-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/packageurl_python-0.9.3-py2.py3-none-any.whl#sha256=0682b2eddab16151da5bd4ef38081e9b27f8eb33cd29baf41f4996d4e88e6e70">packageurl_python-0.9.3-py2.py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/packageurl-python-0.9.9.tar.gz#sha256=872a0434b9a448b3fa97571711f69dd2a3fb72345ad66c90b17d827afea82f09">packageurl-python-0.9.9.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/packageurl_python-0.9.0-py2.py3-none-any.whl#sha256=cf53de6196a1b9d507b077604f9cead63537418634cdd096cc073df1c373ddf7">packageurl_python-0.9.0-py2.py3-none-any.whl</a><br/>
@@ -2302,6 +2304,8 @@
     <a href="https://thirdparty.aboutcode.org/pypi/wcwidth-0.1.7.tar.gz#sha256=3df37372226d6e63e1b1e1eda15c594bca98a22d33a23832a90998faa96bc65e">wcwidth-0.1.7.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/wcwidth-0.2.5.tar.gz#sha256=c4d647b99872929fdb7bdcaa4fbe7f01413ed3d98077df798530e5b04f116c83">wcwidth-0.2.5.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/wcwidth-0.2.5-py2.py3-none-any.whl#sha256=beb4802a9cebb9144e99086eff703a642a13d6a0052920003a230f3294bbe784">wcwidth-0.2.5-py2.py3-none-any.whl</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/python-frontmatter-1.0.0.tar.gz#sha256=e98152e977225ddafea6f01f40b4b0f1de175766322004c826ca99842d19a7cd">python-frontmatter-1.0.0.tar.gz</a><br/>
+    <a href="https://thirdparty.aboutcode.org/pypi/python_frontmatter-1.0.0-py3-none-any.whl#sha256=766ae75f1b301ffc5fe3494339147e0fd80bc3deff3d7590a93991978b579b08">python_frontmatter-1.0.0-py3-none-any.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/reppy-0.4.14-cp36-cp36m-linux_x86_64.whl#sha256=71a3e078b4e7a52acc15cb92f5e367ad6f3678df795b3c36a51ea93ac6030c1c">reppy-0.4.14-cp36-cp36m-linux_x86_64.whl</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/reppy-0.4.14.tar.gz#sha256=ad98ca17bfc39f543e81b85278f71ceaa1ba3f7c6817ff5a18f7305afa5fff87">reppy-0.4.14.tar.gz</a><br/>
     <a href="https://thirdparty.aboutcode.org/pypi/beautifulsoup4-4.10.0.tar.gz#sha256=c23ad23c521d818955a4151a67d81580319d4bf548d3d49f4223ae041ff98891">beautifulsoup4-4.10.0.tar.gz</a><br/>
